--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                     <h2>Klasslista</h2>
 
-                    <form style="border: 1px solid black">
+                    <div class="add-form" style="border: 1px solid black">
                         <!-- Namn -->
                         <label for="inputName">Namn: </label>
                         <input id="inputName" type="text" value="">
@@ -45,7 +45,7 @@
 
                         <!-- Lägg Till Knapp -->
                         <button onclick="createStudent()">Lägg till</button>
-                    </form>
+                    </div>
                     
                     <div class="class-list">
                         <!-- LIST HEADER -->
